refactor: Flatten repository structure to root level
Move integration files from nested custom_components/ha_no_service/ to root.
This simplifies the repository structure and makes it clearer for development.

--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
     "domain": "ha_no_service",
     "name": "HA No Service",
-    "codeowners": ["@Diondk"],
+    "codeowners": [],
     "config_flow": false,
     "dependencies": [],
-    "documentation": "https://github.com/Diondk/ha_no_service",
+    "documentation": "https://github.com/hotheadhacker/no-as-a-service",
     "integration_type": "service",
     "iot_class": "cloud_polling",
-    "issue_tracker": "https://github.com/Diondk/ha_no_service/issues",
+    "issue_tracker": "https://github.com/hotheadhacker/no-as-a-service/issues",
     "requirements": [],
     "version": "1.0.0"
 }
