--- a/custom_components/ha_no_service/manifest.json
+++ b/custom_components/ha_no_service/manifest.json
@@ -1,13 +1,13 @@
 {
     "domain": "ha_no_service",
     "name": "HA No Service",
-    "codeowners": [],
-    "config_flow": false,
+    "codeowners": ["@Diondk"],
+    "config_flow": true,
     "dependencies": [],
-    "documentation": "https://github.com/hotheadhacker/no-as-a-service",
+    "documentation": "https://github.com/Diondk/ha_no_service",
     "integration_type": "service",
-    "iot_class": "cloud_polling",
-    "issue_tracker": "https://github.com/hotheadhacker/no-as-a-service/issues",
+    "iot_class": "local_polling",
+    "issue_tracker": "https://github.com/Diondk/ha_no_service/issues",
     "requirements": [],
-    "version": "1.1.5"
+    "version": "1.1.6"
 }
